<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginBottom="9dp"
                    android:adjustViewBounds="true"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/event_poster"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/changeEventImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/change_event_poster"
                android:textAllCaps="true"
                android:textColor="@color/address"
                android:textSize="14sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_name"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/eventNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:autofillHints=""
                        android:inputType="textShortMessage"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/club_name"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/clubNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/eventDateTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/select_a_date"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:maxLines="4"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/eventTimeTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/select_time"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/venue"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/eventVenueEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:autofillHints="Enter venue details"
                        android:inputType="textShortMessage"
                        tools:ignore="LabelFor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/eventDescriptionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:autofillHints="@string/description"
                        android:inputType="textLongMessage"
                        tools:ignore="LabelFor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organizer_s"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/eventOrganizerEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/enter_line_separated_details"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="18sp"
                        android:autofillHints="organizer"
                        android:inputType="text" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/eventRegisterBtn"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="126dp"
            android:layout_marginEnd="126dp"
            android:layout_marginRight="126dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/mybutton"
            android:padding="10dp"
            android:rotationY="2"
            android:text="@string/create"
            android:textColor="?android:textColorPrimary" />
    </LinearLayout>
</ScrollView>