<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/clubImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/clubimage"
                />

        </RelativeLayout>

<!--        <TextView-->
<!--            android:id="@+id/profile_name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/imgUser"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="15sp"-->
<!--            android:fontFamily="sans-serif-light"-->
<!--            android:text="Joey Tribbiani"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="25sp" />-->


        <TextView
            android:id="@+id/changeImageBtn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/change_club_logo"
            android:textAllCaps="false"
            android:textColor="@color/address"
            android:textSize="14sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:layout_below="@+id/rellay1"
        android:layout_above="@+id/profile_signout"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club_name"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/clubNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    android:autofillHints=""
                    android:inputType="textShortMessage"
                    tools:ignore="LabelFor" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/clubBranchEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:hint="@string/branch"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    android:autofillHints="Enter the branch name"
                    android:inputType="text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club_intro_text_description"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/clubIntroEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    android:maxLines="4"
                    android:autofillHints="Enter description for the club"
                    android:inputType="textLongMessage"
                    tools:ignore="LabelFor" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:rotationY="2"
        android:text="@string/register_club"
        android:textColor="#ffffff" />

</RelativeLayout>